Facades/js/openui5.template.css
/* ... */
/* remove progress bar dot */
html[class*="sapUiTheme-sap_horizon"] .sapMPIBarRemaining::after {
    display: none;
}

html.sapUiTheme-sap_horizon .sapMPIDisplayOnly:not(.sapMPIBarDisabled) .sapMPIBarNeutral+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon .sapMPIBarNeutral+.sapMPIBarRemaining {
    background-color: var(--sapBackgroundColor);
}

html.sapUiTheme-sap_horizon .sapMPIBarPositive+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon .sapMPIBarNeutral+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon .sapMPIBarNegative+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon .sapMPIBarCritical+.sapMPIBarRemaining {
    background-color: var(--sapBackgroundColor);
}

/* progress bar backgrounds */
html[class*="sapUiTheme-sap_horizon"] .sapMPI .sapMPIBarRemaining {
    height: 1.2rem;
}

html[class*="sapUiTheme-sap_horizon"] .sapMPI  .sapMPIBarRemaining {
    position: static;
    -webkit-flex-grow: 1;
    flex-grow: 1;
    border-top-right-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-left: 0;
}

html[class*="sapUiTheme-sap_horizon"] .sapMPIBarPositive .sapMPIText.sapMPITextLeft {
    color: #fff;
}

html[class*="sapUiTheme-sap_horizon"] .sapMPIBarCritical .sapMPIText.sapMPITextLeft {
    color: #fff;
}

html[class*="sapUiTheme-sap_horizon"] .sapMPITextLeft, 
html[class*="sapUiTheme-sap_horizon"]  .sapMPITextRight {
    padding: 0;
    margin-left: 0.375rem;
    margin-right: 0.375rem;
}

html[class*="sapUiTheme-sap_horizon"]  .sapMPIDisplayOnly:not(.sapMPIBarDisabled) .sapMPIBarNeutral+.sapMPIBarRemaining::after, .sapMPIBarNeutral+.sapMPIBarRemaining::after, .sapMPIDisplayOnly:not(.sapMPIBarDisabled) .sapMPIBarNeutral+.sapMPIBarRemaining::before, .sapMPIBarNeutral+.sapMPIBarRemaining::before {
    background: none;
}

/* progress bar end */

/* color/status items */

html[class*="sapUiTheme-sap_horizon"] .sapMObjStatusWrapper .sapMObjStatusText {
    border-radius: var(--sapField_BorderCornerRadius);
}

html[class*="sapUiTheme-sap_horizon"]  .sapMObjStatusInverted.sapMObjStatusNone .sapMObjStatusWrapper {
    border-color: transparent;
    background-color: var(--sapActiveColor);
}

html[class*="sapUiTheme-sap_horizon"]  .sapMObjStatusInverted.sapMObjStatusNone .sapMObjStatusText, .sapMObjStatusInverted.sapMObjStatusNone .sapMObjStatusIcon {
    text-shadow: none;
    color: inherit;
}

/* color/status items end*/

/* icons are now darker, so adapt filter here */
.sapMTileCntContent > .sapMImageContent > img {
    filter:  brightness(0) saturate(100%) invert(39%) sepia(16%) saturate(752%) hue-rotate(170deg) brightness(98%) contrast(90%);
}
 

/* tile menu drop shadow on hover */
html[class*="sapUiTheme-sap_horizon"] .sapMGT:hover:not(.sapMGTPressActive) {
    box-shadow: var(--sapContent_Shadow0) !important;
    background-color: var(--sapTile_Hover_Background);
}

/* Tab "bubbles" in ObjectPageLayout */
html[class*="sapUiTheme-sap_horizon"] .sapUxAPObjectPageSection .sapUiTableCCnt {border-bottom: none;}

/* Dashboard inside a tab in ObjectPageLayout*/
html[class*="sapUiTheme-sap_horizon"] .sapUxAPObjectPageSection.exf-tab-dashboard .sapUxAPObjectPageSectionContainer .sapUxAPObjectPageSubSection .sapUxAPBlockContainer {background: transparent; box-shadow: none}

/* Split inside a tab in ObjectPageLayout */
html[class*="sapUiTheme-sap_horizon"] .sapUxAPObjectPageSection.exf-tab-split .sapUxAPObjectPageSectionContainer .sapUxAPObjectPageSubSection .sapUxAPBlockContainer {padding-bottom: 0; padding-top: 0}
/* Splits inside ObjectPageLayout as sections/tabs */
html[class*="sapUiTheme-sap_horizon"] .sapUiLoSplitter>.sapUiLoSplitterBar {background-color: var(--sapBaseColor);}
html[class*="sapUiTheme-sap_horizon"] .sapUiLoSplitterH > .sapUiLoSplitterContent:first-of-type .sapMPanel {border-top-right-radius: 0; border-bottom-right-radius: 0;}
html[class*="sapUiTheme-sap_horizon"] .sapUiLoSplitterH > .sapUiLoSplitterContent:last-of-type .sapMPanel {border-top-left-radius: 0; border-bottom-left-radius: 0;}

/* context menu button styling */
html[class*="sapUiTheme-sap_horizon"] .sapMPopover .sapMBtnInner {
  border: none;
}

/* if table has stripes, stripe dummy cells too  */
html[class*="sapUiTheme-sap_horizon"] .rowAlternate-true .sapUiTableCtrl tr:nth-child(even) .sapUiTableCellDummy,
html[class*="sapUiTheme-sap_horizon"] .sapMListTblRowAlternate .sapUiTableCtrl tr:nth-child(even) .sapUiTableCellDummy {
    background-color: var(--sapList_AlternatingBackground) !important;
}

/* make the dummy cell border less dark */
html[class*="sapUiTheme-sap_horizon"] .sapUiTableCellDummy {
    border-left: .0625rem solid #c2c2c2;
}

/* Add alternate row coloring for sap.ui.table.Table (config in UI5DataTable.php)*/
html[class*="sapUiTheme-sap_horizon"] .rowAlternate-true .sapUiTableCtrl tr:nth-child(even) {
    background-color: var(--sapList_AlternatingBackground);
}

/* stripe split table rows */
/* todo: check if configurable, and add blue selection border */
html[class*="sapUiTheme-sap_horizon"] .sapUiTableContentRow:nth-child(even) {
    background-color: var(--sapList_AlternatingBackground);
}

html[class*="sapUiTheme-sap_horizon"] .rowAlternate-true .sapUiTableCtrl .sapUiTableContentRow.sapUiTableRowSel{
    background-color: var(--sapList_SelectionBackgroundColor);
}

html[class*="sapUiTheme-sap_horizon"] .sapUiTableContentRow.sapUiTableRowSel {
    background-color: var(--sapList_SelectionBackgroundColor);
}
/* allow table selection on stripes (blue highlight) */

html[class*="sapUiTheme-sap_horizon"] .rowAlternate-true .sapUiTableCtrl .sapUiTableContentRow.sapUiTableRowSel{
    background-color: var(--sapList_SelectionBackgroundColor);
}
/* ... */

